
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "ta"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
libloading = "0.7"
lazy_static = "1.4"
once_cell = "1.21.3"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
